# AdvancedMathematics

./: .gitignore  Advance Maths Unit Guide.docx  CMakeLists.txt  install_sdl2.sh  setup.sh
AM_FinalAssignment/: code.txt  main.py
AM_FinalAssignment/AM_Assignment_SUBMISSION_2024_25/: code.txt
AM_module/: AM_Canvas.py  AM_Cone.py  AM_Cylinder.py  AM_Sphere.py  AM_Torus.py  __init__.py
SDL2/lib64/pkgconfig/: SDL2_image.pc  sdl2.pc
Week0_Prep/: Makefile  main.cpp  main.py
Week10_Fourier/: main.py
Week1_Calc/: main  main.cpp  main.py  main2.cpp
Week2_Rays/: main.py
Week3_VectorCalc/: main.py
Week4_Bicubic/: main.py
Week5_Light/: main.py
Week6_RayTracing/: main.py
Week7_Samples/: main.py
Week8_Random/: main.py
Week9_Quaternions/: main.py
